--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="hero-section" id="home">
         <div class="hero-container">
             <div class="hero-left">
-                <img src="/images/profile.jpeg" alt="Vikas Kumar Kumawat" class="profile-img">
+                <img src="/images/profile.jpeg" alt="My Image" class="profile-img">
             </div>
             <div class="hero-right">
                 <h1>Vikas Kumar Kumawat</h1>
